Music/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-app
  labels:
    name: music-app
